TWINS-927: [improvement] refactor entity service registry for streamlined initialization, improve lazy entity resolution with usage type enhancements, and update default show mode handling